ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.0.7, 2.1.2
    • Affects Version/s: 2.0.4
    • Component/s: Sharding
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A bad reload of config information when retrieving information for a database can cause a not-fully-initialized DBConfig object to remain in the shared config info. This can happen, for example, when all config servers are down.

      We need to catch this error and remove the bad entry while still in the _lock if anything goes wrong while connecting.

      see Grid::getDBConfig().

      Affects 2.0 branch, probably 2.1.

            Assignee:
            Greg Studer (Inactive)
            Reporter:
            Greg Studer (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: