SERVER-5920 protect reload of database config, ensure we don't get partial dbconfig objs